2A/05_Projet_GL/src/test/deca/context/valid/complet/06_init_field_super_diff.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    int x ;
}




class B extends A {

}

class C extends B {

}

class D extends C {


    void initX() {
        x = 0 ;
    }
}